--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "sqlite3": ">= 2.1.1",
     "coffee-script": ">= 1.2.0",
-    "dateformat": ">= 1.0.6-1.2.3"
+    "dateformat": ">= 1.0.6-1.2.3",
+    "pad": ">= 0.0.4"
   },
   "engine": "node 0.6.12"
 }
